# GarageBard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cartfile  Cartfile.resolved  Mintfile  README.md
.github/workflows/: ci.yml
GarageBard/: ContentView.swift  GarageBardApp.swift  Info.plist
GarageBard.xcodeproj/: project.pbxproj
GarageBard.xcodeproj/xcshareddata/xcschemes/: GarageBard.xcscheme
GarageBard/Assets.xcassets/for-sure-all.dataset/: Contents.json  for-sure-all.mid
GarageBard/Assets.xcassets/for-sure-sax.dataset/: Contents.json  for-sure-sax.mid
GarageBard/Assets.xcassets/still-alive.dataset/: Contents.json  still-alive.mid
GarageBard/Components/: InputField.swift  MainToolbar.swift  Notifications.swift  PlayButton.swift  PlayerBar.swift  PlayerButton.swift  PlaylistItemRow.swift  PopoverMenu.swift  ProgressBar.swift  SongLibrary.swift  SubToolbar.swift  Toast.swift  ToggleField.swift  TrackPopover.swift
GarageBard/Models/: Player.swift  SongLoader.swift
GarageBard/Utils/: BardController.swift  BardEngine.swift  KeyboardController.swift  MIDIController.swift  ProcessManager.swift  TimeFormatter.swift  ToneSampler.swift
GarageBard/ViewModels/: PlayerViewModel.swift  PlayerViewModelProtocol.swift  UpdaterViewModel.swift
GarageBard/Views/: CheckForUpdatesView.swift  ContentView.swift
GarageBardTests/: GarageBardTests.swift
GarageBardUITests/: GarageBardUITests.swift  GarageBardUITestsLaunchTests.swift
Installer/: GarageBard.dmg  README.md  appcast.xml  build_release.py  makedmg.sh  pyproject.toml
(+3 files in other folders)
