[tool.poetry]
name = "installer"
version = "0.1.0"
description = ""
authors = ["Mitchel Cabuloy <mixxorz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
